<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_header_list_fragment">HeaderListFragment</string>
    <string name="default_author">Anonymous</string>
    <string name="title_activity_quote_view">QuoteView</string>
    <string name="quoteView_AuthorLabel">Author</string>
    <string name="quoteView_QuoteLabel">Quote</string>
    <string name="default_quote">&quot;When life gives you lemons...&quot;</string>
    <string name="quoteView_YearLabel">Year</string>
    <string name="quoteView_SaveButton">Save</string>
    <string name="quoteView_CancelButton">Cancel</string>
    <string name="menu_new">New</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="empty_string"/>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_new">New</string>
    <string name="delete_quote_verification">Are you sure you want to permanently delete quote?</string>
    <string name="search_title">search</string>

</resources>