<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" >

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_input_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_new"
        android:textColor="@android:color/white"/>
 
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_save" android:enabled="false" android:visible="false">
    </item>
    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_menu_cancel"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_cancel" android:enabled="false" android:visible="false">
    </item>

</menu>