<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quoteView_AuthorLabel" />

        <EditText
            android:id="@+id/quoteView_Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="30sp" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quoteView_YearLabel" />

        <EditText
            android:id="@+id/quoteView_Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quoteView_QuoteLabel" />

        <EditText
            android:id="@+id/quoteView_Quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="30sp" >
        </EditText>
    </LinearLayout>

</LinearLayout>